---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "array",
            "length": 0,
            "type": {
              "kind": "integer",
              "sign": "unsigned",
              "width": 32
            }
          }
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 0,
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        }
      },
      "visibility": "public"
    },
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/8VXW26DMBBcwISYJErU3iJSJRIg5DMf+WmlHoIm4hwcvUXylmVYWqnFrSVk8K53ZsdPAupL4Grj6hDasXD7xdXZ78phxlhZMMV9KhnN59XVVhEkmjFxC7hzxj9nRWmV/Gbkn1sR05c+XUzjJ36WuDjXdhifADcCP+zTFebqaSwLz1ocNjTMX8st9oN91BZtBG0SPyW/8y4APOaD+oSgT+KHT8bxl57ic75WyVfqn0C+K098eC6mgk8wUTNXbOOxSSGWr7myprF2qcJnwz5tz8eCzQjbGmyxsLH+3bzYi/ykTfKR65fn0o7GY5kKTG1Pk7ZQ4Fzbnk8puJ2AW6hw08bO5/nC56PP80Uba5wHph1iS5scayP03IM+Pu4nUh9P+2z2OMGf37uStPRZItBTasSaLaU/2KywmXaIk7pvI3BkLOYRg3/hvreuXog+3H+n4C8Af8BbacNLuVX8reK/+Hie3PvKPd0cunIf+r+zVNtXtjRekzHYZD/zN3lkmIeh8Z1AcgtpvOdKDWJou7i6G5sXiIdn3dR+uaOxduy3+UK7FfVnkGl7+1z6Vef+x4zXZEzDuxQBfgz+z+5bnuMyj8sPeTZVfWjyuqnL+n4vbvUDxO9KKHSaG7+u8vPtWNyqtzKv89O3+O/Mp9ysuQ8AAA==",
  "debug_symbols": "jZFNjoQgEIXvUmsWQIs4XsUYg4odEoKGhkkmhrtPIW3/LDrpDR9F8V5B1Q6zHuN1MG5Zb9B2O4zeWGuug10nFczq8HQHmhchoGUERF0gCxpoOeLnQE0LWAEvuBRUBejCUyJwFhiC1zr7v1TEd2zKaxegddFaAr/KxuPSbVPuYFAes5SAdjMSDRdjdd4l8lTTz1JZ3bWyeYjF12pGz9KMVm/6HiM1Gf/WwZSdvFGj1fdwiW56yYa/7cycE9j8Ouk5ep2dnmPAbnYVJ4L3BBiedHVD5CUH2PUOfyXrPuVn/AM=",
  "file_map": {
    "50": {
      "source": "fn main(a: [[u32; 0]; 1], b: bool) -> pub [u32; 0] {\n    if (b) {\n        a[0]\n    } else {\n        a[0]\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
